Lecture depuis un fichier / Surchage constructeur, méthodes

--- a/Objet/Objet.csproj
+++ b/Objet/Objet.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contact.cs" />
+    <Compile Include="CreerContact.cs" />
     <Compile Include="Enseignant.cs" />
     <Compile Include="Etudiant.cs" />
     <Compile Include="Program.cs" />
