--- a/Objet/Objet.csproj
+++ b/Objet/Objet.csproj
@@ -44,7 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contact.cs" />
-    <Compile Include="CreerContact.cs" />
+    <Compile Include="InteractionsUtilisateur.cs" />
+    <Compile Include="Manager.cs" />
     <Compile Include="Enseignant.cs" />
     <Compile Include="Etudiant.cs" />
     <Compile Include="Program.cs" />
